--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
   "name": "nintendo-switch",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Chelny Duplan",
+  "homepage": "http://localhost:3000",
+  "keywords": [],
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "node-sass": "5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "5.24.1",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.13.5",
+    "@babel/preset-flow": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "7.0.0",
+    "css-loader": "5.0.2",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.2.0",
+    "mini-css-extract-plugin": "1.3.8",
+    "sass-loader": "11.0.1",
+    "sass-resources-loader": "2.1.1"
   },
   "eslintConfig": {
     "extends": [
