--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://chelny.github.io/nintendo-switch-ui",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,7 +39,7 @@
     "@babel/preset-env": "7.13.5",
     "@babel/preset-flow": "7.12.13",
     "@babel/preset-react": "7.12.13",
-    "babel-loader": "8.2.2",
+    "babel-loader": "8.1.0",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.2",
     "file-loader": "6.2.0",
