--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "UI"
   ],
   "author": "Chelny Duplan",
-  "homepage": "http://chelny.github.io/nintendo-switch-ui",
+  "homepage": "https://chelny.github.io/nintendo-switch-ui",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
